Wed Jan 10 21:35:25 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:

          Updated with my changes since 0.5.4.

Tue Jan  8 20:01:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * RACE/common/RACE_common.idl:
          Use the CORBA::StringSeq to reduce footprint

Tue Jan  8 19:43:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_CCMException.idl:
        * ciao/CCM_Context.idl:
          Added some commented out IDL that is part of the QoS4CCM spec

Sun Jan  7 18:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplicationManager/URL_Parser.cpp:
          No need to set members to 0 in destructor

        * DAnCE/RepositoryManager/URL_Parser.cpp:
          Fixed conversion warning and memory leak

Sun Jan  7 12:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_ClientContainerInterceptor.idl:
        * ciao/CCM_ClientContainerInterceptorRegistration.idl:
        * ciao/CCM_ContainerClientRequestInfo.idl:
        * ciao/CCM_ContainerInterceptor.idl:
        * ciao/CCM_ContainerRequestInfo.idl:
        * ciao/CCM_ContainerServantRequestInfo.idl:
        * ciao/CCM_ContainerServerRequestInfo.idl:
        * ciao/CCM_ContainerStubRequestInfo.idl:
        * ciao/CCM_ExtensionComponent.idl:
        * ciao/CCM_ExtensionContext.idl:
        * ciao/CCM_InvalidRegistration.idl:
        * ciao/CCM_QoS.idl:
        * ciao/CCM_ServantContainerInterceptor.idl:
        * ciao/CCM_ServantContainerInterceptorRegistration.idl:
        * ciao/CCM_ServerContainerInterceptor.idl:
        * ciao/CCM_ServerContainerInterceptorRegistration.idl:
        * ciao/CCM_StubContainerInterceptor.idl:
        * ciao/CCM_StubContainerInterceptorRegistration.idl:
          Added interfaces from QoS for CCM spec (OMG 06-04-15). We
          don't have an implementation yet, just the interfaces at
          this moment
